--- a/scss/components/_imageDrop.scss
+++ b/scss/components/_imageDrop.scss
@@ -108,7 +108,7 @@
     width: 32px;
     height: 32px;
     background: $colorGrey;
-    margin-right: 8px;
+    margin-right: 12px;
     border-radius: 50%;
     display: flex;
     justify-content: center;
